Opened 17 years ago

Closed 16 years ago

#1573 closed bug (fixed)

Sample Be program Xmas crashes with a divide error

Reported by: scottmc Owned by: marcusoverhagen
Priority: normal Milestone: R1
Component: - General Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I downloaded the Be Sample code from BeBits and build most of the sample code. Most ran with no issues other than text not fitting inside buttons and such, but the xmas program crashed, attached is a screenshot. Something about a divide error.

Attachments (2)

xmas-crash.png (111.9 KB ) - added by scottmc 17 years ago.
HelloWorld.png (28.7 KB ) - added by scottmc 17 years ago.

Download all attachments as: .zip

Change History (6)

by scottmc, 17 years ago

Attachment: xmas-crash.png added

by scottmc, 17 years ago

Attachment: HelloWorld.png added

comment:1 by jackburton, 17 years ago

Owner: changed from axeld to marcusoverhagen

XMas uses the BSound api. Currently that api is unimplemented in haiku, and I'm not sure we'll ever implement it, since it's marked as deprecated. Although, I think we should at least change the BSound methods to return B_ERROR instead of B_OK. In any case, reassigning to Marcus.

comment:2 by jackburton, 16 years ago

I changed the BSound methods (hrev22962) to return errors instead of B_OK, since they aren't implemented (yet ?). Does this help ?

comment:3 by scottmc, 16 years ago

Seems to work ok now, can close.

comment:4 by stippi, 16 years ago

Resolution: fixed
Status: newclosed

"Fixed" in hrev22962 it seems. (The cause of the crashing.)

Note: See TracTickets for help on using tickets.