Return an error in BSound methods, since they aren't implemented. Should fix bug #1573, although I can't really test.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22962 a95241bf-73f2-0310-859d-f6bbb57e9c96